--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "dev": "nodemon server/index.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "core-js": "^3.6.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^3.5.7"
+    "mongodb": "^3.5.7",
+    "oxford-dictionary-api": "^1.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
